<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainActivityColorBackgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:textAlignment="center"
        android:layout_margin="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:textSize="@dimen/_25ssp"
        android:textColor="@color/MainActivityColorTextView"
        android:text="@string/welcome_to_quiz_for_friends"
        android:layout_width="wrap_content"
        android:id="@+id/text_view"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_Quiz"
        android:textColor="@color/MainActivityColorButtonColor"
        android:text="@string/start_quiz"
        android:layout_below="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/MainActivityColorTextView"
        android:text="@string/start_quiz_by_id"
        android:textSize="@dimen/_30ssp"
        android:layout_below="@+id/start_Quiz"
        android:layout_width="wrap_content"
        android:id="@+id/start_quiz_by_idText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_Quiz_by_id"
        android:textColor="@color/MainActivityColorButtonColor"
        android:text="@string/start_quiz_by_id"
        android:layout_below="@+id/start_quiz_by_idText"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_height="wrap_content"/>
</RelativeLayout>